apps/sms/style/sms.css
/* ... */
#threads-container,#thread-messages {
  z-index: 10;
  background: white;
}

#messages-contact-pick-button {
  display: none;
}

/*
  Styles for Edit mode in Thread List
*/

.edit form[role="dialog"][data-type="edit"] > menu {
  transform: translateY(0);
}

.edit .messages-compose-form {
  transform: translateY(3.6rem);
}

.edit form[role="dialog"][data-type="edit"] header {
  transform: translateY(0);
}

.edit #threads-container .checkbox-container {
  pointer-events:auto;
  opacity: 1;
  transform: translateX(0);
}

.edit .undo-candidate {
  display: none;
}

.edit .message-block {
  border-top: .1rem solid #DBDBDB;
  margin-bottom: 0;
}

/*
  Styles for new message
*/

section[role="region"].new > header:first-child h1 {
  pointer-events: none;
}

section[role="region"].new > header:first-child form {
  display: block;
}

.new .carrier-wrapper {
  display: none;
}

.new #messages-edit-icon {
  display: none;
}

.new #messages-contact-pick-button {
  display: block;
}

#messages-contact-pick-button .icon-user {
  display: block;
  height: 2rem;
  width: 2rem;

  background-image: url(images/add_contact.png);
}

#messages-contact-pick-button .icon-user:active {
  background-position: 0 2rem;
}

/*
  Messages Style as 'bubbles'
*/

.article-list {
  -moz-box-sizing: border-box;
  background: none repeat scroll 0 0 #E4E4E4;
  text-align: left;
  z-index: 5;
}

.article-list header:first-child {
  margin-top: 2rem;
}

.article-list header {
  margin: 0 0 0.6rem;
  padding: 1.5rem 0 0 0;
  border-bottom: none;

  color: #606060;
  font-size: 1.3rem;
  text-align: left;
  text-transform: uppercase;
}

.article-list[data-type="list"] > ul:last-child {
  margin-bottom: 7rem;
}

.article-list header,
  .article-list[data-type="list"] .message.incoming .bubble {
  padding-left: 4rem;
}

.article-list[data-type="list"] .message {
  position: relative;

  display: block;
  overflow: hidden;
  width: 100%;
  height: auto;
  margin-bottom: 1rem;
  border-bottom: none;

  transition: none;
}

/* hide download button via css on expired messages */
.message.expired button {
  display: none;
}

.article-list[data-type="list"] .message.hidden {
  display: none;
}

.article-list[data-type="list"] header.hidden {
  display: none;
}

.article-list[data-type="list"] .message .bubble {
  overflow: visible;
  -moz-box-sizing: border-box;
  max-width: -moz-calc(100% - 4rem);
  height: 100%;
  padding: 1.5rem;

  background: #fff;
}

.article-list[data-type="list"] .attachment[data-attachment-type='video'] {
  width: 10.7rem;
  height: 8rem;
}

.article-list[data-type="list"] .attachment[data-attachment-type='audio'] {
  width: 6rem;
  height: 6rem;
}

.article-list[data-type="list"] .message .attachment {
  display: block;
  margin: 1rem 0;
}
/* Attachments that occur at the bounds of an MMS message do not need
 * additional spacing. */
#messages-container[data-type="list"] .message .attachment:first-child {
  margin-top: 0;
}
#messages-container[data-type="list"] .message .attachment:last-child {
  margin-bottom: 0;
}

#messages-container[data-type="list"] .message.mms .bubble img {
  height: auto;
  width: auto;
}

.article-list[data-type="list"] .message.outgoing .attachment {
  margin-left: auto;
  margin-right: 0;
}

.article-list[data-type="list"] .message.outgoing .bubble {
  float: right;

  padding-right: 4.1rem;
  margin-left: 4rem;
  border-radius: 0.3rem 0 0 0.3rem;
}

.article-list[data-type="list"] .message.incoming .bubble {
  float: left;

  border-radius: 0 0.3rem 0.3rem 0;

  background: #FCC987;
}

.article-list[data-type="list"] .message.sending .bubble {
  color: #5f5f5f;
}

.article-list[data-type="list"] .message.error .bubble {
  border: 0.1rem solid #B90000;
}

.article-list[data-type="list"] .message.error.outgoing .bubble {
  border-right-width: 0;
}

.article-list[data-type="list"] .message .bubble > aside {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: auto;
  display: none;
  overflow: hidden;
  width: 4rem;
  text-align: center;
}

.article-list[data-type="list"] .message.incoming .bubble > aside {
  left: 0;
  right: auto;
  margin: 0 0.5rem 0 0;
}

.article-list[data-type="list"] .message.error .bubble > aside progress {
  display: none;
}

.article-list[data-type="list"] .message.error .bubble > aside {
  display: block;

  background: url('images/icons/exclamation.png') no-repeat center center;
  background-size: 2.2rem;
}

.article-list[data-type="list"] .message button.download {
  padding: 0.5em;
  margin: 0.5em;
  background: #ccc;
  width: 100%;
}

.article-list[data-type="list"] .message.pending .bubble > aside,
.article-list[data-type="list"] .message.sending .bubble > aside {
  display: block;
}

.article-list[data-type="list"] .message.pending .bubble > aside progress,
.article-list[data-type="list"] .message.sending .bubble > aside progress {
  display: block;
  height: 100%;
  margin: 0 auto;
}

.edit .article-list[data-type="list"] .message.error .bubble > aside,
.edit .article-list[data-type="list"] .message.pending .bubble > aside progress,
.edit .article-list[data-type="list"] .message.sending .bubble > aside progress {
  display: none;
}

.article-list[data-type="list"] .message .bubble p {
  text-align: left;
  font-size: 1.8rem;
  line-height: 2.3rem;
  white-space: pre-wrap;
  padding: 0;
}

.article-list[data-type="list"] .message .bubble p a {
  color: #000;
  text-decoration: underline;
}

/*
  Styles for Edit mode in Messages Container
*/

.edit .article-list[data-type="list"] .message {
  border-color: #e7e7e7;
}

.edit [data-type="list"] .message .bubble {
  pointer-events: none;
}

.edit-button {
  background: -moz-linear-gradient(top, #b50404 0%, #850a0a 100%);
  height: 100%;
  width: 100%;
  -moz-box-sizing: border-box;
  font-weight: 600;
  font-size: 1.6rem;
  color: white;
  opacity: 0.99; /* hackaround for painting bug (bug 821221) */
}

.disabled {
  opacity: 0.3;
  pointer-events: none;
}
/* ... */

